# learning_knowledge_graphs

./: .gitignore  ReadMe.md
auto_generated_kg/: ReadMe.md  __init__.py  display.py  entity_algos.py  entity_pairs.csv  graph_db.py  pyproject.toml  test.py  wiki_scraper.py
helloworld/: and_other_pattern_matcher.py  build_knowledge_graph.py  especially_pattern_matcher.py  including_pattern_matcher.py  knowledge_graph.py  matcher_pipe.py  or_other_pattern_matcher.py  pattern_matcher.py  relation.py  relation_provider.py  such_as_pattern_matcher.py  text_extractor.py  text_extractor_pipe.py
helloworld/text/: London.txt  Paris.txt  WWII.txt  World War I.txt
